--- a/DigitalWareApi/DigitalWareApi/Web.config
+++ b/DigitalWareApi/DigitalWareApi/Web.config
@@ -19,7 +19,7 @@
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <connectionStrings>
-    <add name="DojoApplicationEntities" connectionString="metadata=res://*/DojoApplicationDataBaseModel.csdl|res://*/DojoApplicationDataBaseModel.ssdl|res://*/DojoApplicationDataBaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JUANJE-TORRE;initial catalog=DojoApplication;persist security info=True;user id=sa;password=juanje9225;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DigitalWareEntities" connectionString="metadata=res://*/DigitalWare.csdl|res://*/DigitalWare.ssdl|res://*/DigitalWare.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JUANJE-TORRE;initial catalog=DigitalWare;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.webServer>
     <handlers>
